--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,900italic,900,700italic,700,600italic,600,400italic,300italic,300,200italic");
+@import url("https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap");
 
 @tailwind base;
 @tailwind components;
